# rust-serial-tool

./: Cargo.toml  build.rs
ui/: appwindow.slint
