[package]
authors = ["Kevin <406972552@qq.com>"]
build = "build.rs"
edition = "2021"
name = "rust-serial-tool"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
winres = "*"
